2004-10-08 Bart Hakvoort  <gparted@users.sf.net>

	* src/Partition.cc: changed color of reiserfs from blue to purple highlight. + some cosmetics.

2004-10-08 Bart Hakvoort  <gparted@users.sf.net>

	* include/Frame_Resizer_Base.h: removed inheritance from sigc::trackable. (this is already done by Glib::Object)
	* src/Dialog_Partition_Copy.cc,
	  src/Frame_Resizer_Base.cc: fixed issues with resizing reiserfs filesystems.

2004-10-08 Bart Hakvoort  <gparted@users.sf.net>

	* src/Dialog_About.cc: updated translatorcomment.

2004-10-08 Bart Hakvoort  <gparted@users.sf.net>

	* src/Dialog_Base_Partition.cc,
	  src/Dialog_Partition_Resize_Move.cc: fixed some resizing-issues with reiserfs.

2004-10-07 Bart Hakvoort  <gparted@users.sf.net>

	* src/Dialog_Base_Partition.cc,
	  src/Win_GParted.cc: removed spaces before some exclamation and question marks (thanks to Jordi Mallach)

2004-10-07 Bart Hakvoort  <gparted@users.sf.net>

	* src/Dialog_About.cc: unmarked 'Copyright' string for translation and replaced (c) with © 

2004-10-07 Bart Hakvoort  <gparted@users.sf.net>

	* include/Utils.h: added support for colored text to mk_label
	* include/VBox_VisualDisk.h,
	  include/VBox_VisualDisk.cc: use UTF-8 character ██ instead of some self-forged widget.

2004-10-06 Bart Hakvoort  <gparted@users.sf.net>

	* implemented mk_label wherever possible (means less code, improved readability)

2004-10-06  David Lodge <dave@cirt.net>

	* configure.in (ALL_LINGUAS): Added "en_GB" (British English).

2004-10-06 Bart Hakvoort  <gparted@users.sf.net>

	* lots of files =) : enabled support for reiserfs, also made filesystemsupport more 'pluggable' so it's easier to
	add support for other filesystems in the future.
	* include/Utils.h: new file containing much used functions and variables.

2004-10-06  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* configure.in (ALL_LINGUAS): Added "es" (Spanish).

2004-10-04  Jordi Mallach  <jordi@sindominio.net>
